# simrun

./: .gitignore  .gitmodules  HOWTO_RUN.txt  analyze_trace.py  test_ir.json
docs/: SIMRUN_ARCHITECTURE_AND_IR_GUIDE.md  h.md  hello.txt  ir.json  ir2.json  ir_format_template.json  prompt1.md  sim_code_structure.md  ui.json
profiles/components/api/service/: default.yaml
profiles/components/database/: default.yaml
profiles/networks/: ethernet.yaml
src/: .gitignore  compiler_driver.h  ir_parser.cpp  ir_parser.h  ir_serializer.cpp  ir_serializer.h  validator.cpp  validator.h
src/compiler/: CMakeLists.txt  compiler.cpp  final_ir.json  input.json  simrun-untitled-project-1767815273059.json
src/compiler/Compiler-Simrun/profiles/networks/: ethernet.yaml
src/compiler/Compiler-Simrun/src/: a.out  ir_serializer.cpp  ir_serializer.h  profile_resolver.cpp  server
src/compiler/ast/: ast.h
src/compiler/common/: errors.h
src/compiler/parser/: parser.cpp  parser.h
src/compiler/profiles/components/: redis.yaml
src/compiler/profiles/components/cache/: default.yaml
src/compiler/src/: compiler_driver.cpp  compiler_driver.h  ir.h  ir_parser.cpp  ir_parser.h  profile_repository.cpp  profile_repository.h  profile_resolver.cpp  profile_resolver.h  server.cpp  test_yaml.cpp  validator.cpp  validator.h
src/compiler/validator/: validator.cpp  validator.h
src/electron/: main.js  package.json  preload.js
src/sim/: CMakeLists.txt  e.json  main.cpp
src/sim/cmake/: Sanitizers.cmake
src/sim/core/: base_entity.h  event_queue.cpp  event_queue.h  scheduler.h  sim_types.h  simulator.cpp  simulator.h
src/sim/engine/behavior/: behavior_executor.cpp  behavior_executor.h
src/sim/engine/core/: event.h  scheduler.cpp  scheduler.h  simulator.cpp  simulator.h
src/sim/engine/events/: dispatch.cpp  dispatch.h
src/sim/engine/factory/: context_factory.cpp  context_factory.h  event_factory.cpp  event_factory.h  state_factory.cpp  state_factory.h
src/sim/engine/ir/: ir_parser.cpp  ir_parser.h  ir_schema.h
src/sim/entities/: cache.cpp  cache.h  database.cpp  database.h  network_link.cpp  network_link.h  networklink.h  service.cpp  service.h
src/sim/events/: api_events.cpp  api_events.h  database_events.cpp  database_events.h  events.h  network_link_event.cpp  network_link_event.h
src/sim/factory/: factory.cpp  factory.h
src/sim/include/simrun/behavior/: behavior_executor.h  opcodes.h
src/sim/include/simrun/core/: enums.h  event.h  sim_context.h  simulator.h
src/sim/include/simrun/entities/: component_runtime.h  link_runtime.h
src/sim/include/simrun/execution/: execution_context.h
src/sim/include/simrun/ir/: ir_schema.h  ir_validation.h  json_ir_parser.h
src/sim/include/simrun/runtime/: request.h  request_table.h  token_table.h
src/sim/include/simrun/scheduler/: scheduler.h
src/sim/include/simrun/stats/: stats_runtime.h
src/sim/include/simrun/util/: types.h
src/sim/src/: event_initializer.cpp  event_initializer.h  ir_parser.cpp  ir_parser.h  ir_types.h  simulation_context.h
src/sim/src/behavior/: behavior_executor.cpp
src/sim/src/core/: sim_context.cpp  simulator.cpp
src/sim/src/entities/: component_runtime.cpp  link_runtime.cpp
src/sim/src/ir/: ir_validation.cpp  json_ir_parser.cpp
src/sim/src/runtime/: request_table.cpp  token_table.cpp
src/sim/src/scheduler/: scheduler.cpp
src/sim/src/stats/: stats_runtime.cpp
src/sim/tests/: simrun_tests.cpp
src/sim/tests/fixtures/: complex_system_ir.json
src/ui/: index.html  package-lock.json  package.json  tailwind.config.ts
src/ui/electron/: main.cjs  preload.js
src/ui/src/: App.tsx  global.d.ts  index.css
src/ui/src/components/canvas/: ArchitectureCanvas.tsx  ArchitectureNode.tsx
src/ui/src/components/header/: CanvasHeader.tsx
src/ui/src/components/icons/: ComponentLogos.tsx
src/ui/src/components/inspector/: ApiParams.tsx  CacheParams.tsx  DatabaseParams.tsx  InspectorPanel.tsx  NetworkParams.tsx
src/ui/src/components/panels/: ConfigTabs.tsx  FaultsPanel.tsx  RoutesPanel.tsx  WorkloadPanel.tsx
src/ui/src/components/toolbar/: ComponentToolbar.tsx
src/ui/src/hooks/: use-theme.tsx
src/ui/src/lib/: irSerializer.ts
src/ui/src/pages/: Index.tsx
src/ui/src/store/: architectureStore.ts  simulationStore.ts
src/ui/src/types/: architecture.ts  simulation.ts
